--- a/templates/index.html
+++ b/templates/index.html
@@ -110,6 +110,13 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+
+	#copyright {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 12px;
+            color: #808080;
+        }
     </style>
 </head>
     <body>
@@ -133,6 +140,11 @@
                 {% endif %}
             </div>
         </div>
+
+	
+	    <div id="copyright">
+        	&copy; 2023 Md. Ishtiuk Ahammed. All rights reserved.
+    	</div>
 
         <script>
             var loader = document.getElementById("loader");
